src/objects/ddrive__Registration__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>DD Registrations</relationshipLabel>
        <relationshipName>DD_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Participant_Fundraising_Goal_Percent__c</fullName>
        <label>Participant Fundraising Goal Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Participant_Manager_Relationship__c</fullName>
        <label>Participant Manager Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Participant_Sum_Donations_Made__c</fullName>
        <label>Participant Total Donated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Participant_Sum_Donations_Offline__c</fullName>
        <label>Participant Total Raised Offline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Participant_Sum_Donations_Online__c</fullName>
        <label>Participant Total Raised Online</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Registration_Processing_Fee_Paid__c</fullName>
        <label>Registration Processing Fee Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Connected_To_Facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connected to Facebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Connected_to_Twitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connected to Twitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Customized_Fundraising_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customized Fundraising Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Is_Returning_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Returning Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Address_1__c</fullName>
        <label>Participant Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Address_2__c</fullName>
        <label>Participant Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_City__c</fullName>
        <label>Participant City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Constituent_ID__c</fullName>
        <label>Participant Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Country__c</fullName>
        <label>Participant Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Email__c</fullName>
        <label>Participant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Managed_By__c</fullName>
        <label>Participant Managed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Num_Team_Members__c</fullName>
        <label>Participant Teammate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Postal_Code__c</fullName>
        <label>Participant Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_State__c</fullName>
        <label>Participant State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Sum_Donations__c</fullName>
        <label>Participant Total Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Sum_Pledges__c</fullName>
        <label>Participant Total Pledges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_URL_Alias__c</fullName>
        <label>Participant URL Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Previous_Event_Name__c</fullName>
        <label>Previous Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Source_Participant_ID__c</fullName>
        <label>Source Participant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Status__c</fullName>
        <label>Event Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Entered_by__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Entered by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_First_Name__c</fullName>
        <label>Participant First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Fundraising_Goal__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Fundraising Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Last_Name__c</fullName>
        <label>Participant Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Number_of_Donor_Solicitation__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Number of Donor Solicitation</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Number_of_Team_Solicitations__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Number of Team Solicitations</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registered_Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participant Registered Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registration_Date__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registration_Datetime__c</fullName>
        <label>Participant Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registration_Fee_Promo_Code__c</fullName>
        <label>Participant Registration Fee Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registration_Fee__c</fullName>
        <label>Participant Registration Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registration_Source_Text__c</fullName>
        <label>Participant Registration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registration_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Type_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Type__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Participant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant__c</fullName>
        <label>Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Prize_Code__c</fullName>
        <label>Prize Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Prize_Description__c</fullName>
        <label>Prize Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Prize_Option_Code__c</fullName>
        <label>Prize Option Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Prize_Option_Desc__c</fullName>
        <label>Prize Option Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Host__c</fullName>
        <label>Referrer Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Path__c</fullName>
        <label>Referrer Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Token__c</fullName>
        <label>Referrer Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Captain_ID__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Team Captain ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Captain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Team Captain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Id__c</fullName>
        <label>Team ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Type__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Team Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team__c</fullName>
        <label>Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DD Registration</label>
    <listViews>
        <fullName>ddrive__All</fullName>
        <columns>NAME</columns>
        <columns>ddrive__Team__c</columns>
        <columns>ddrive__Participant__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>